chore: add docker buildx and remove install step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,22 +23,8 @@ env:
   FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
   HUSKY: "0"
 jobs:
-  install:
-    name: Install
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-          cache: "yarn"
-      - name: Install dependencies
-        run: yarn install --immutable --prefer-offline
   lint:
     name: Lint
-    needs: install
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -54,7 +40,6 @@ jobs:
         run: yarn lint
   unit-test:
     name: Unit test
-    needs: install
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -70,7 +55,6 @@ jobs:
         run: yarn test
   size-limit:
     name: Size limit
-    needs: install
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -90,6 +74,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Run e2e tests
         run: |
           docker compose -f docker-compose.e2e.yaml up --build --exit-code-from synpress
+        env:
+          COMPOSE_DOCKER_CLI_BUILD: 1
+          DOCKER_BUILDKIT: 1
