--- a/docker-compose.e2e.yaml
+++ b/docker-compose.e2e.yaml
@@ -17,6 +17,8 @@ services:
       - DISPLAY=display:0.0
       - SYNDEBUG=true
       - CYPRESS_DOCKER_RUN=true
+      - TURBO_TOKEN=${TURBO_TOKEN}
+      - TURBO_TEAM=${TURBO_TEAM}
     command: >
       bash -c 'yarn wait-on http://display:8080 && yarn test:e2e'
     networks:
