--- a/docker-compose.e2e.yaml
+++ b/docker-compose.e2e.yaml
@@ -2,9 +2,8 @@ version: "3.9"
 services:
   synpress:
     container_name: synpress
-    build:
-      dockerfile: ./Dockerfile.e2e
-      context: .
+    # this image is built by the ci workflow
+    image: carrot-kpi/e2e-testable-frontend
     depends_on:
       - display
     entrypoint: []
