--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -17,4 +17,4 @@ COPY --from=builder /app/out/yarn.lock ./yarn.lock
 RUN yarn install --immutable --prefer-offline
 COPY --from=builder /app/out/full/ .
 
-ENTRYPOINT yarn wait-on http://display:8080 && yarn test:e2e
+CMD yarn wait-on http://display:8080 && yarn test:e2e
