--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: false
+          load: true
           tags: carrot-kpi/e2e-testable-frontend
           builder: ${{ steps.setup-buildx.outputs.name }}
           file: ./Dockerfile.e2e
