--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -33,9 +33,9 @@
         "size-limit": "size-limit",
         "prepare-fathom": "prepare-fathom",
         "config-react-env": "./scripts/config-react-env.js",
-        "start:staging": "STAGING=true craco start",
+        "start:staging": "yarn prepare-fathom && STAGING=true craco start",
         "start": "craco start",
-        "synpress:run": "env-cmd -f .env.synpress synpress run --browser chrome --configFile synpress.config.js",
+        "synpress:run": "env-cmd -f ../../.env.e2e synpress run --browser chrome --configFile synpress.config.js",
         "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
     },
     "dependencies": {
