--- a/turbo.json
+++ b/turbo.json
@@ -30,14 +30,14 @@
             ]
         },
         "test:e2e": {
-            "inputs": ["src/**/*.{ts,tsx}", "e2e/**/*.{ts,tsx}"],
+            "inputs": ["src/**/*.{ts,tsx}", "cypress/**/*.{ts,tsx}"],
             "dependsOn": ["^build"]
         },
         "start": {
             "dependsOn": ["^build"]
         },
         "size-limit": {
-            "dependsOn": ["^build"]
+            "dependsOn": ["^build", "build"]
         },
         "lint": {},
         "format": {}
