--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -42,6 +42,7 @@
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
+        "@faker-js/faker": "^8.3.1",
         "@synthetixio/synpress": "^3.7.2-beta.9",
         "class-variance-authority": "^0.7.0",
         "dayjs": "^1.11.10",
