--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "extends": "../tsconfig/frontend.json",
-    "include": ["./src/**/*", "./cypress/**/*"],
+    "include": ["./src/**/*"],
     "compilerOptions": {
         "lib": ["dom", "esnext", "webworker"],
-        "types": ["cypress", "node"],
+        "types": ["node"],
         "outDir": "./dist"
     }
 }
