Add new settings drawer, components refactor (#555)
* feat(qa): smoke test Cypress (#551)

* feat(qa): rewritting smoke test

* feat(qa): added additional checks for guest user

* feat(qa): added check for user with wallet

* feat(qa): changed filenames to kebab case

* feat(subgraph): handle new template features registry in kpi token and oracle managers (#552)

* feat(subgraph): handle new template features registry in kpi token and oracle managers

* chore: update var naming

* chore(subgraph): common allowed feature account id function

---------

Co-authored-by: luzzifoss <fedeluzzi00@gmail.com>

* chore(subgraph): minor updates

* Chain switch issue (#553)

* fix(ui): wrong data test ids format

* feat(frontend): redirect to home on chain switch from campaign page

* fix(sdk): rename enumerate function for manager contract abis

* docs: add changeset

* feat(frontend): add new settings drawer, components refactor

* refactor(react): change TxType definition

* feat(frontend): add transactions to settings drawer

* fix(frontend): wrong imports, fix tsconfig

* fix: change fathom reward recovery event

* feat(frontend): add interface settings to drawer

* fix(frontend): add dedicated tsconfig for cypress due to inconsistencies

* feat(frontend): adapt navbar and drawer to mobile view

* refactor(frontend): remove start from navbar links

* fix(frontend): data test ids

* docs: update changeset

* refactor(frontend): replace custom useEffect with useClickAway

* fix(frontend): remove /create from links, remove useless useEffect from navbar

* fix(frontend): replace custom short date function with relativeTime plugin

* fix(frontend): add todo comment

---------

Co-authored-by: Bug Catcher / Milan <57331244+MilanVojnovic95@users.noreply.github.com>
Co-authored-by: Federico Luzzi <federico.luzzi@proton.me>
Co-authored-by: luzzifoss <fedeluzzi00@gmail.com>

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "extends": "../tsconfig/frontend.json",
-    "include": ["./src/**/*", "./cypress/**/*"],
+    "include": ["./src/**/*"],
     "compilerOptions": {
-        "baseUrl": "./",
         "lib": ["dom", "esnext", "webworker"],
-        "types": ["cypress", "node"],
+        "types": ["node"],
         "outDir": "./dist"
     }
 }
