--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,7 +36,8 @@
         "start:staging": "yarn prepare-fathom && STAGING=true craco start",
         "start": "craco start",
         "synpress:run": "env-cmd -f ../../.env.e2e synpress run --browser chrome --configFile synpress.config.js",
-        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
+        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'",
+        "test:metamask": "cypress open"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
@@ -46,6 +47,7 @@
         "@synthetixio/synpress": "^3.7.2-beta.9",
         "class-variance-authority": "^0.7.0",
         "dayjs": "^1.11.10",
+        "decompress": "^4.2.1",
         "eth-provider": "^0.13.6",
         "ethereum-blockies-base64": "^1.0.2",
         "ethereum-provider": "^0.7.7",
@@ -112,6 +114,7 @@
         "size-limit": "^11.0.1",
         "start-server-and-test": "^2.0.3",
         "tailwindcss": "^3.3.6",
+        "ts-loader": "^9.5.1",
         "tsconfig": "*",
         "turbo": "^1.11.2",
         "typescript": "^5.3.3",
