--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -80,6 +80,7 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.5",
         "@size-limit/file": "^11.0.1",
+        "@types/cypress": "^1.1.3",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.17",
         "@types/react-router-dom": "^5.3.3",
