--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -292,10 +292,10 @@
     "dependencies": {
         "@carrot-kpi/sdk": "*",
         "@popperjs/core": "^2.11.8",
-        "@tiptap/extension-placeholder": "2.1.13",
-        "@tiptap/pm": "^2.1.13",
-        "@tiptap/react": "2.1.13",
-        "@tiptap/starter-kit": "2.1.13",
+        "@tiptap/extension-placeholder": "2.2.0",
+        "@tiptap/pm": "^2.2.0",
+        "@tiptap/react": "2.2.0",
+        "@tiptap/starter-kit": "2.2.0",
         "@types/react-virtualized-auto-sizer": "^1.0.4",
         "@uniswap/token-lists": "1.0.0-beta.33",
         "class-variance-authority": "^0.7.0",
@@ -304,11 +304,11 @@
         "rc-switch": "^4.1.0",
         "react-number-format": "^5.3.0",
         "react-popper": "^2.3.0",
-        "react-use": "^17.4.2",
-        "react-virtualized-auto-sizer": "^1.0.20",
+        "react-use": "^17.5.0",
+        "react-virtualized-auto-sizer": "^1.0.21",
         "react-window": "^1.8.10",
-        "tailwind-merge": "^2.1.0",
-        "viem": "^1.20.0"
+        "tailwind-merge": "^2.2.1",
+        "viem": "^2.6.1"
     },
     "peerDependencies": {
         "@carrot-kpi/switzer-font": "^0.1.0",
@@ -316,48 +316,50 @@
         "react": "^18.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.23.6",
-        "@babel/preset-env": "^7.23.6",
+        "@babel/core": "^7.23.9",
+        "@babel/preset-env": "^7.23.9",
         "@babel/preset-react": "^7.23.3",
         "@babel/preset-typescript": "^7.23.3",
         "@carrot-kpi/switzer-font": "^0.1.0",
+        "@commitlint/cli": "^18.6.0",
+        "@commitlint/config-conventional": "^18.6.0",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
-        "@size-limit/file": "^11.0.1",
-        "@storybook/addon-actions": "^7.6.4",
-        "@storybook/addon-essentials": "^7.6.4",
-        "@storybook/addon-interactions": "^7.6.4",
-        "@storybook/addon-links": "^7.6.4",
+        "@size-limit/file": "^11.0.2",
+        "@storybook/addon-actions": "^7.6.10",
+        "@storybook/addon-essentials": "^7.6.10",
+        "@storybook/addon-interactions": "^7.6.10",
+        "@storybook/addon-links": "^7.6.10",
         "@storybook/addon-styling": "^1.3.7",
-        "@storybook/manager-api": "^7.6.4",
-        "@storybook/react": "^7.5.3",
-        "@storybook/react-webpack5": "^7.6.4",
+        "@storybook/manager-api": "^7.6.10",
+        "@storybook/react": "^7.6.10",
+        "@storybook/react-webpack5": "^7.6.10",
         "@storybook/testing-library": "^0.2.2",
-        "@storybook/theming": "^7.6.4",
+        "@storybook/theming": "^7.6.10",
         "@tailwindcss/typography": "^0.5.10",
-        "@types/react": "^18.2.37",
+        "@types/react": "^18.2.48",
         "@types/react-window": "^1.8.8",
         "@types/rollup-plugin-peer-deps-external": "^2.2.4",
-        "autoprefixer": "^10.4.16",
+        "autoprefixer": "^10.4.17",
         "eslint-config-custom": "*",
-        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.33.2",
         "file-loader": "^6.2.0",
-        "postcss": "^8.4.32",
-        "postcss-loader": "^7.3.3",
-        "prettier": "^3.1.1",
+        "postcss": "^8.4.33",
+        "postcss-loader": "^8.0.0",
+        "prettier": "^3.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rimraf": "^5.0.5",
-        "rollup": "^4.9.0",
-        "rollup-plugin-esbuild": "^6.1.0",
+        "rollup": "^4.9.6",
+        "rollup-plugin-esbuild": "^6.1.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
-        "size-limit": "^11.0.1",
-        "storybook": "^7.6.4",
-        "tailwindcss": "^3.3.6",
+        "size-limit": "^11.0.2",
+        "storybook": "^7.6.10",
+        "tailwindcss": "^3.4.1",
         "tsconfig": "*",
-        "turbo": "^1.11.2",
+        "turbo": "^1.11.3",
         "typescript": "^5.3.3"
     }
 }
