--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -345,6 +345,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.33.2",
         "file-loader": "^6.2.0",
+        "husky": "^9.0.7",
         "postcss": "^8.4.33",
         "postcss-loader": "^8.0.0",
         "prettier": "^3.2.4",
