chore: format code

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -6,6 +6,6 @@
         "declaration": true,
         "emitDeclarationOnly": true,
         "declarationDir": "./dist/types",
-        "rootDir": "./src"
-    }
+        "rootDir": "./src",
+    },
 }
