--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -3,6 +3,6 @@
     "include": ["./src/**/*", "./test/**/*"],
     "compilerOptions": {
         "outDir": "./dist",
-        "rootDir": "./src"
-    }
+        "rootDir": "./src",
+    },
 }
