--- a/packages/shared-state/tsconfig.json
+++ b/packages/shared-state/tsconfig.json
@@ -6,6 +6,6 @@
         "emitDeclarationOnly": true,
         "declarationDir": "./dist/types",
         "outDir": "./dist",
-        "rootDir": "./src"
-    }
+        "rootDir": "./src",
+    },
 }
