feat: new wagmi + viem version

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -4,6 +4,6 @@
     "compilerOptions": {
         "lib": ["dom", "esnext", "webworker"],
         "types": ["node"],
-        "outDir": "./dist"
-    }
+        "outDir": "./dist",
+    },
 }
