--- a/packages/frontend/cypress/tsconfig.json
+++ b/packages/frontend/cypress/tsconfig.json
@@ -5,6 +5,6 @@
         "baseUrl": "./",
         "lib": ["dom", "esnext", "webworker"],
         "types": ["cypress", "node"],
-        "outDir": "./dist"
-    }
+        "outDir": "./dist",
+    },
 }
