--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -44,17 +44,18 @@
         "@carrot-kpi/ui": "*",
         "@faker-js/faker": "^8.4.0",
         "@synthetixio/synpress": "^3.7.2-beta.9",
+        "@tanstack/react-query": "^5.18.0",
         "class-variance-authority": "^0.7.0",
         "dayjs": "^1.11.10",
         "eth-provider": "^0.13.6",
         "ethereum-blockies-base64": "^1.0.2",
         "ethereum-provider": "^0.7.7",
         "jwt-decode": "^4.0.0",
-        "react-redux": "8.1.3",
+        "react-redux": "9.1.0",
         "react-router-dom": "^6.21.3",
         "sanitize-html": "^2.11.0",
         "use-fathom-client": "^1.3.2",
-        "viem": "^2.6.1"
+        "viem": "^2.7.1"
     },
     "peerDependencies": {
         "@carrot-kpi/shared-state": "*",
@@ -63,7 +64,7 @@
         "i18next": "^23.5.1",
         "react": "^18.2.0",
         "react-i18next": "^13.4.1",
-        "wagmi": "^1.4.6"
+        "wagmi": "^2.5.5"
     },
     "devDependencies": {
         "@carrot-kpi/shared-state": "*",
@@ -89,14 +90,14 @@
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
         "cssnano": "^6.0.3",
-        "cypress": "^13.6.3",
+        "cypress": "^13.6.4",
         "dotenv": "^16.4.1",
         "env-cmd": "^10.1.0",
         "esbuild-loader": "^4.0.3",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.1.3",
         "husky": "^9.0.7",
-        "i18next": "^23.8.1",
+        "i18next": "^23.8.2",
         "multiformats": "^13.0.1",
         "postcss": "^8.4.33",
         "prettier": "^3.2.4",
@@ -115,9 +116,9 @@
         "start-server-and-test": "^2.0.3",
         "tailwindcss": "^3.4.1",
         "tsconfig": "*",
-        "turbo": "^1.11.3",
+        "turbo": "^1.12.0",
         "typescript": "^5.3.3",
-        "wagmi": "^2.5.4",
+        "wagmi": "^2.5.5",
         "workbox-precaching": "^7.0.0",
         "workbox-routing": "^7.0.0"
     },
