--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -337,6 +337,7 @@
         "@storybook/testing-library": "^0.2.2",
         "@storybook/theming": "^7.6.12",
         "@tailwindcss/typography": "^0.5.10",
+        "@tanstack/react-query": "^5.18.0",
         "@types/react": "^18.2.48",
         "@types/react-window": "^1.8.8",
         "@types/rollup-plugin-peer-deps-external": "^2.2.4",
@@ -361,6 +362,7 @@
         "tailwindcss": "^3.4.1",
         "tsconfig": "*",
         "turbo": "^1.12.0",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "wagmi": "^2.5.5"
     }
 }
