--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,16 +80,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         id: setup-buildx
       - name: Build testable host frontend image
-        uses: docker/build-push-action@v2
-        with:
-          push: false
-          load: true
-          tags: carrot-kpi/e2e-testable-frontend
-          builder: ${{ steps.setup-buildx.outputs.name }}
-          file: ./Dockerfile.e2e
-          context: .
-      - name: Run e2e tests
-        run: docker compose -f docker-compose.e2e.yaml up --exit-code-from synpress
+        run: docker-compose -f docker-compose.ci.yml --env-file .env.e2e up --build --exit-code-from synpress ./Dockerfile.e2e
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
           DOCKER_BUILDKIT: 1
