--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -150,7 +150,8 @@
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "build": "yarn clean && rollup -c rollup.config.mjs && tsc --project tsconfig.build.json",
         "clean": "rimraf ./dist",
-        "test": "jest",
+        "test": "vitest run",
+        "test:watch": "vitest",
         "size-limit": "size-limit"
     },
     "dependencies": {
@@ -163,29 +164,22 @@
         "@carrot-kpi/shared-state": "*"
     },
     "devDependencies": {
-        "@babel/core": "^7.23.9",
-        "@babel/preset-env": "^7.23.9",
-        "@babel/preset-typescript": "^7.23.3",
         "@carrot-kpi/shared-state": "*",
-        "@jest/globals": "^29.7.0",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@size-limit/file": "^11.0.2",
-        "@types/jest": "^29.5.11",
         "@types/rollup-plugin-peer-deps-external": "^2.2.4",
-        "babel-jest": "^29.7.0",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.33.2",
-        "jest": "^29.7.0",
         "prettier": "^3.2.4",
         "rimraf": "^5.0.5",
         "rollup": "^4.9.6",
         "rollup-plugin-esbuild": "^6.1.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "size-limit": "^11.0.2",
-        "ts-jest": "^29.1.2",
         "tsconfig": "*",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.3.1"
     }
 }
