feat(frontend): limit frontend interaction to same-environment chains

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,14 +26,17 @@
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "clean": "rimraf ./build && rimraf ./dist",
         "build": "yarn build:library",
-        "build:production": "yarn clean && yarn prepare-fathom && BUILDING_MODE=production craco build",
-        "build:staging": "yarn clean && yarn prepare-fathom && BUILDING_MODE=staging craco build",
+        "build:production": "yarn clean && yarn prepare-fathom && ENVIRONMENT=prod craco build",
+        "build:staging": "yarn clean && yarn prepare-fathom && ENVIRONMENT=staging craco build",
+        "build:dev": "yarn clean && yarn prepare-fathom && ENVIRONMENT=dev craco build",
         "build:library": "yarn clean && yarn prepare-fathom && rollup -c rollup.config.mjs && tsc --project tsconfig.build.json",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
         "prepare-fathom": "prepare-fathom",
         "config-react-env": "./scripts/config-react-env.js",
-        "start:staging": "yarn prepare-fathom && BUILDING_MODE=staging craco start",
+        "start:production": "yarn prepare-fathom && ENVIRONMENT=prod craco start",
+        "start:staging": "yarn prepare-fathom && ENVIRONMENT=staging craco start",
+        "start:dev": "yarn prepare-fathom && ENVIRONMENT=dev craco start",
         "start": "craco start",
         "synpress:run": "env-cmd -f ../../.env.e2e synpress run --browser chrome --configFile synpress.config.js",
         "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
