--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "build:frontend-production": "turbo run build:production --filter @carrot-kpi/host-frontend",
         "build:frontend-staging": "turbo run build:staging --filter @carrot-kpi/host-frontend",
         "build:frontend-library": "turbo run build:library --filter @carrot-kpi/host-frontend",
+        "build:frontend": "turbo run build:standalone --filter @carrot-kpi/host-frontend",
         "build:storybook": "turbo run build:storybook --filter @carrot-kpi/ui",
         "lint": "turbo run lint",
         "format": "turbo run format",
