--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,10 @@
             "dependsOn": ["^build"],
             "outputs": ["build/**"]
         },
+        "build:standalone": {
+            "dependsOn": ["^build"],
+            "outputs": ["build/**"]
+        },
         "build:library": {
             "dependsOn": ["^build"],
             "outputs": ["dist/**"]
