--- a/turbo.json
+++ b/turbo.json
@@ -48,6 +48,7 @@
     },
     "globalEnv": [
         "NODE_ENV",
+        "ENVIRONMENT",
         "INFURA_PROJECT_ID",
         "WALLETCONNECT_PROJECT_ID",
         "FATHOM_SITE_ID",
