chore(sdk): move shared-state lib from dev to prod dependencies

--- a/turbo.json
+++ b/turbo.json
@@ -26,6 +26,7 @@
             "outputs": ["storybook-static/**"]
         },
         "test": {
+            "dependsOn": ["^build"],
             "inputs": [
                 "src/**/*.{ts,tsx}",
                 "tests/**/*.{ts,tsx}",
